[package]
name = "rossweisse"
version = "0.1.0"
authors = ["mmlvgx <mmlvgx@gmail.com>"]

description = "✨ Blazing fast Logging in Rust"

readme = "README.md"

homepage = "https://github.com/mmlvgx/rossweisse"
repository = "https://github.com/mmlvgx/rossweisse"

license = "MIT"
license-file = "LICENSE"

keywords = ["blazing", "fast", "logging", "in", "rust"]

[dependencies]
chrono = "0.4.24"
