[package]
name = "vollerei"
version = "0.1.4"
authors = ["mmlvgx <mmlvgx@gmail.com>"]
edition = "2018"

description = "✨ Blazing fast Logging in Rust"
documentation = "https://docs.rs/vollerei"

readme = "README.md"

homepage = "https://github.com/mmlvgx/vollerei"
repository = "https://github.com/mmlvgx/vollerei"

license = "MIT"
license-file = "LICENSE"

keywords = ["blazing", "fast", "logging", "in", "rust"]

exclude = ["/assets/*"]

[dependencies]
chrono = "0.4.24"
